# delta-lang

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  cmake_windows.yml
example/: example.dlt  glew.dlt
examples/wasm_test/: example.dlt
extension/: CHANGELOG.md  README.md  deltalang-0.0.1.vsix  deltalang-0.0.2.vsix  package.json  vsc-extension-quickstart.md
extension/syntaxes/: delta.tmLanguage.json
runtime/: example.dlt  logs.txt  stdlib.lib
runtime/int/: example.asm  example.ast.txt  example.ll
src/: Arena.h  Assembler.cpp  Assembler.h  CLI.cpp  Compiler.cpp  Compiler.h  Debug.cpp  Debug.h  Error.cpp  Error.h  Files.cpp  Files.h  Globals.h  Globals.h.in  Log.cpp  Log.h  Nodes.h  Parser.cpp  Parser.h  Preprocessor.cpp  Preprocessor.h  Properties.h  String.cpp  Strings.h  Tokenizer.cpp  Tokenizer.h  Tokens.h  Types.cpp  Types.h  Wasm.h.in  Wasm.html  main.cpp
stdlib/: AssemblerStdlibFunctions.h  README.md  stdGraphics.h  stdGraphicsWindows.c  stdTimeWindows.c  stdbool.dlt  stdgraphics.dlt  stdio.dlt  stdlib.c  stdlib.h  stdlibGraphics.h  stdlibGraphicsWindows.c  stdlibTime.h  stdlibTimeWindows.c  stdmath.dlt  stdmemory.dlt  stdstring.dlt  stdsystem.dlt  stdtime.dlt  stdtypes.dlt
